--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
-transformers==4.26.0
-datasets==2.9.0
-deepspeed==0.8.0
+gensim==4.3.0
+pytest-benchmark==4.0.0
+scipy==1.10.0
+scikit-learn==1.2.1
+cython==0.29.33
